removed extraneous links on home page, fixed spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -130,7 +130,8 @@
   }
 
   .intro {
-    margin-top: 300px;
+    margin-top: 100px;
+    margin-bottom: 200px;
     font-size: 70px;
   }
 
